<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="@dimen/padding_10dp"
        app:layoutDescription="@xml/mail_layout_motion_scene_swipe"
        tools:context=".view.MainFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_wiki_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/iv_wiki_button_margin_start"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_wikipedia" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wiki_input_layout"
            style="@style/EditText"
            android:layout_width="@dimen/width_0_dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/wiki_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/wiki_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/wiki_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/wiki_corner_radius"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:helperText="@string/wiki_search_hint"
            app:layout_constraintBottom_toTopOf="@+id/include_view_pager_fragment"
            app:layout_constraintStart_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wiki_search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <include
            android:id="@+id/include_view_pager_fragment"
            layout="@layout/view_pager_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wiki_input_layout" />
    </androidx.constraintlayout.motion.widget.MotionLayout>

    <FrameLayout
        android:id="@+id/transparent_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@android:color/white"
        android:clickable="false" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/option_one_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/option_one_container_padding_end"
            android:paddingBottom="@dimen/option_one_container_padding_bottom">

            <TextView
                android:id="@+id/option_one_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/option_one_text"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_archive" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/option_two_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:paddingEnd="@dimen/option_two_container_padding_end"
            android:paddingBottom="@dimen/option_two_container_padding_bottom">

            <TextView
                android:id="@+id/option_two_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/option_two_text"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:srcCompat="@drawable/ic_send" />
        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_baseline_hamburger" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fab_description"
        app:layout_anchor="@+id/bottom_app_bar" />

    <ImageView
        android:id="@+id/plus_image_view_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/plus_image_view_fab_margin_bottom"
        android:elevation="@dimen/plus_image_view_fab_elevation"
        app:layout_anchor="@+id/floatingActionButton"
        app:layout_anchorGravity="center_horizontal|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_plus_fab" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>